package it.polimi.ingsw.am32.model;

import java.util.ArrayList;

public class Deck {
    private ArrayList<Card> cards;

    Deck() {
        cards = new ArrayList<Card>();
    }

    public Card draw() {
        // TODO
    }
    public boolean shuffle() {
        // TODO
    }
}
