package it.polimi.ingsw.am32.model;

public class LConfigurationFour {
    int calculateOccurences(Field field, int x, int y) {
        // TODO
    }
}
