package it.polimi.ingsw.am32.model;

public class LConfigurationThree {
    int calculateOccurences(Field field, int x, int y) {
        // TODO
    }
}
