package it.polimi.ingsw.am32.model;

public enum MatchStatus {
    FAIL,
    SUCCESS,
    LAST_TURN,
    END
}
