package it.polimi.ingsw.am32.model.card;

public enum CornerType {
    PLANT,
    FUNGI,
    ANIMAL,
    INSECT,
    QUILL,
    INKWELL,
    MANUSCRIPT,
    EMPTY,
    NON_COVERABLE
}
