package it.polimi.ingsw.am32.model.card.pointstrategy;

public class AllSpecial extends PointStrategy{
    int calculateOccurences(Field field, int x, int y) {
        // TODO
    }
}
