package it.polimi.ingsw.am32.model.card.pointstrategy;

public class CountResource extends PointStrategy{
    private ObjectType type;
    private int count;

    int calculateOccurences(Field field, int x, int y) {
        // TODO
    }
}
