package it.polimi.ingsw.am32.model.card.pointstrategy;

public class Diagonals extends PointStrategy{
    private ObjectType type;
    private int leftToRight;

    int calculateOccurences(Field field, int x, int y) {
        // TODO
    }
}
