package it.polimi.ingsw.am32.model.card.pointstrategy;

public class LConfigurationOne {
    int calculateOccurences(Field field, int x, int y) {
        // TODO
    }
}
