package it.polimi.ingsw.am32.model.card.pointstrategy;

public enum ObjectType {
    PLANT,
    FUNGI,
    ANIMAL,
    INSECT,
    QUILL,
    INKWELL,
    MANUSCRIPT
}
