package it.polimi.ingsw.am32.model.card.pointstrategy;

public abstract class PointStrategy {
    abstract int calculateOccurences(Field field, int x, int y);
}
