package it.polimi.ingsw.am32.model.deck;

import java.util.ArrayList;

public class DecksFromDisk {
    public ArrayList<Card> createResourcesDeck() {
       // TODO
    }
    public ArrayList<Card> createGoldDeck() {
        // TODO
    }
    public ArrayList<Card> createObjectiveCardsDeck() {
        // TODO
    }
    public ArrayList<Card> createStartCardsDeck() {
        // TODO
    }
}
