package it.polimi.ingsw.am32.model.player;

public enum Colour {
    RED,
    GREEN,
    BLACK,
    BLUE,
    YELLOW
}
